[gd_scene load_steps=11 format=3 uid="uid://b607al0ll6nfe"]

[ext_resource type="Script" path="res://addons/grid_2d/grid_2d.gd" id="1_7uh1k"]
[ext_resource type="Script" path="res://scenes/combat/combat.gd" id="1_pefpc"]
[ext_resource type="Texture2D" uid="uid://bd66bt1gm0jax" path="res://desert-warrior.png" id="2_grfuc"]
[ext_resource type="Script" path="res://entities/common/combat_entity_experimental.gd" id="2_q628h"]
[ext_resource type="PackedScene" uid="uid://ce03pc67436wa" path="res://ui/combat/combat_interface.tscn" id="3_67xwi"]
[ext_resource type="Texture2D" uid="uid://c6dn11c567imk" path="res://entities/party-members/black_mage/player-shinobi.png" id="3_kojkh"]
[ext_resource type="Texture2D" uid="uid://bms47f3c7kofx" path="res://bandit.png" id="3_rjkws"]

[sub_resource type="Resource" id="Resource_11dro"]
script = ExtResource("2_q628h")
name = "fella"
texture = ExtResource("3_kojkh")

[sub_resource type="Resource" id="Resource_x0el5"]
script = ExtResource("2_q628h")
name = "monke"
texture = ExtResource("2_grfuc")

[sub_resource type="Resource" id="Resource_ly3ln"]
script = ExtResource("2_q628h")
name = "monker"
texture = ExtResource("3_rjkws")

[node name="Combat" type="Node2D"]
script = ExtResource("1_pefpc")
party_data = Array[ExtResource("2_q628h")]([SubResource("Resource_11dro"), SubResource("Resource_11dro"), SubResource("Resource_11dro"), SubResource("Resource_11dro")])
enemy_data = Array[ExtResource("2_q628h")]([SubResource("Resource_x0el5"), SubResource("Resource_ly3ln")])
is_party_advantage = true

[node name="EnemyGrid" type="Node2D" parent="."]
position = Vector2(192, 208)
scale = Vector2(4, 4)
script = ExtResource("1_7uh1k")
rows = 3
h_seperation = 34
v_seperation = 34
sort_by = 1
do_not_update = true

[node name="PartyGrid" type="Node2D" parent="."]
position = Vector2(790, 160)
scale = Vector2(4, 4)
script = ExtResource("1_7uh1k")
h_seperation = 32
v_seperation = 28
do_not_update = true

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="CombatInterface" parent="UI" instance=ExtResource("3_67xwi")]
